[metadata]
name = lanscanner
version = 1.0.2
author = mohamad
author_email = mr.mirshamsi.78@gmail.com
description = A Project to scan IPs and open ports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrm78/lanScanner
project_urls =
    Bug Tracker = https://github.com/mrm78/lanScanner/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    netifaces==0.11.0
    pyfiglet

[options.packages.find]
where = src